--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body class="container">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
+    <h1>Тест</h1>
     <include src="./partials/header.html"></include>
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
