--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-  <body class="container">
+  <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header.html"></include>
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal-main.html"></include>
   </body>
 </html>
