--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,6 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-main.html"></include>
     <button type="button" data-modal-open>open modal</button>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
