--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,6 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-main.html"></include>
     <button type="button" data-modal-open>open modal</button>
-    <button id="to-top" class="scrollBtn">
-      <svg width="30" height="30">
-        <use href="./images/icons.svg#icon-arrow-up2"></use>
-      </svg>
-    </button>
+    <include src="./partials/scrollUp.html"></include>
   </body>
 </html>
