--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-main.html"></include>
     <include src="./partials/modal-team.html"></include>
-    <button type="button" data-modal-open>open modal</button>
+    <!-- <button type="button" data-modal-open>open modal</button> -->
     <include src="./partials/scrollUp.html"></include>
   </body>
 </html>
