--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-  <body class="container">
+  <body>
+  <!-- <body class="container"> -->
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header.html"></include>
