--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script type="module" src="./index.js"></script>
 </head>
 
-<body class="container">
+<body>
   <!-- ❗️❗️❗️ Add partials like so for every page -->
   <!-- <include src="./partials/example.html"></include> -->
   <include src="./partials/header.html"></include>
